# bevy_retro_shaders

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP_SUMMARY.md  Justfile  README.md  SECURITY.md  SETUP_GUIDE.md
.github/: dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  example_request.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release-please.yml  release.yml
examples/: crt_3d_example.rs  crt_example.rs
scripts/: setup-repo.sh
src/: crt.rs  lib.rs
src/shaders/: crt.wgsl
tests/: crt_settings_test.rs
web/: 3d.html  Trunk.toml  index.html
web/assets/css/: style.css
web/assets/js/: main.js
