[package]
name = "bevy_retro_shaders"
version = "0.1.0"
edition = "2021"
authors = ["Yudao"]
description = "Retro post-processing shaders for Bevy - CRT effects, scanlines, and glitch effects"
license = "MIT"
repository = "https://github.com/kodaskills/bevy_retro_shaders"
keywords = ["bevy", "graphics", "shader", "retro", "crt"]
categories = ["graphics", "game-development"]

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
rand = "0.8"

# Web dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Worker",
    "MessageEvent",
    "OffscreenCanvas",
    "DedicatedWorkerGlobalScope",
    "MouseEvent",
    "WorkerOptions",
    "WorkerType",
    "CustomEvent",
] }
raw-window-handle = "0.6"
console_log = "1.0"
console_error_panic_hook = "0.1"

# WASM support for getrandom (used by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
bevy = { version = "0.18", features = ["debug"] }

[features]
default = ["crt", "jpeg"]
crt = []
jpeg = ["bevy/jpeg"]
hot_reload = ["bevy/file_watcher"]

[[example]]
name = "crt_example"
path = "examples/crt_example.rs"
required-features = ["jpeg", "hot_reload"]

[[example]]
name = "crt_3d_example"
path = "examples/crt_3d_example.rs"

[[bin]]
name = "crt_example_web"
path = "examples/crt_example.rs"

[[bin]]
name = "crt_3d_example_web"
path = "examples/crt_3d_example.rs"

[profile.release]
opt-level = 3
lto = true

# WebAssembly profile for GitHub Pages
[profile.web]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
